--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <p>Nome: Jéssica de Oliveira Araujo</p>
     <p>Email: jessii.aaraujo@gmail.com</p>
     <p>Telefone: (21) 99261-2064</p>
+
+    <h2>Objetivo Profissional</h2>
+    <p>Desenvolvimento de softaware, back end, front end ou full stack</p>
     
     <h2>Experiência Profissional</h2>
     <ul>
