--- a/Curriculo/index.html
+++ b/Curriculo/index.html
@@ -39,7 +39,7 @@
         <section class="objetivos">
           <h2 class="centralizar"> Objetivos</h2>
           <h4>
-
+          Web Developer, software developer.
           </h4>
 
 
