--- a/Curriculo/index.html
+++ b/Curriculo/index.html
@@ -17,7 +17,7 @@
 
 
         <figure>
-          <img src="CYMERA_20230308_100018.jpg" alt="texto alternativo" <hr>
+          <img src="CYMERA_20230308_100018.jpg" alt="mulher negra" > 
 
         </figure>
 
@@ -39,7 +39,7 @@
         <section class="objetivos">
           <h2 class="centralizar"> Objetivos</h2>
           <h4>
-          Web Developer, software developer.
+          Web Developer, software developer, software quality assurance.
           </h4>
 
 
@@ -72,7 +72,7 @@
       <ul>
         <li>
           <h3>Auxiliar de backoffice</h3>
-          <p>Neobpo - set de 2017 - ago de 2022</p>
+          <p class="periodo">Neobpo - set de 2017 - ago de 2022</p>
           <p>Responsável de loja, total suporte operacional junto a supervisão,
             Envio e recebimento de e-mails internos.
             Responsável pelo livro de Reclamação PROCON
@@ -87,7 +87,7 @@
         </li>
         <li>
           <h3>Responsável de loja / Atendente</h3>
-          <p>Logos Serviços - nov de 2016 - set de 2017 </p>
+          <p class="periodo">Logos Serviços - nov de 2016 - set de 2017 </p>
           <p>Responsável de loja, total suporte operacional junto a supervisão,
             Envio e recebimento de emails internos.
             Responsável pelo livro de Reclamação PROCON
@@ -96,14 +96,14 @@
         </li>
         <li>
           <h3>Auxiliar de escritório</h3>
-          <p>Grupo Habib's - set de 2012 - mar de 2013 </p>
+          <p class="periodo">Grupo Habib's - set de 2012 - mar de 2013 </p>
           <p>Empresa no ramo de fastfood- Habibs
             Suporte ao setor de departamento pessoal, admissão, férias, demissão, recolhimento de documentação,
             preenchimento de carteira de trabalho, acompanhamento diário de folha de ponto.</p>
         </li>
         <li>
           <h3>Auxiliar de escritório</h3>
-          <p>Nova Hard LTDA-ME - set de 2010 - mar de 2012 </p>
+          <p class="periodo">Nova Hard LTDA-ME - set de 2010 - mar de 2012 </p>
           <p>Atendimento presencial a clientes, responsável pela entrada e saída de equipamentos de informática,
             responsável pela solicitação e recebimento de peças de informática para reparo de computadores, responsável
             por emissão de NF-E</p>
